# Advent-of-code-2017

./: .gitignore  README.md
AdventofCode2017.hsproj/: .uuid  AdventofCode2017.cabal  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Lib.hs  _Day1.hsplay  _Day2.hsplay  _Day3.hsplay  _Day4.hsplay  _Day5.hsplay  _Day6.hsplay
Day 1.hsproj/: .uuid  AdventofCode2017.cabal  Day1.hs  Day2.hs  Main.hs  _Main.hsplay
Day 1.hsproj/.stack-work/install/x86_64-linux/lts-8.9/8.0.2/flag-cache/: text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR
day1/: day1.cabal
day1/.stack-work/install/x86_64-linux/lts-9.14/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  day1-0.1.0.0-8ejXB5CI237uhJ5VQ9cBu  day1-0.1.0.0-I6Zs3oHdAuT2i5IuP21bW8  day1-0.1.0.0-LKLId9gWgcN8O7u7p6ZsBZ  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL
day1/.stack-work/install/x86_64-linux/lts-9.14/8.0.2/lib/x86_64-linux-ghc-8.0.2/day1-0.1.0.0-8ejXB5CI237uhJ5VQ9cBu/: Lib.dyn_hi  Lib.hi
day1/.stack-work/install/x86_64-linux/lts-9.14/8.0.2/lib/x86_64-linux-ghc-8.0.2/day1-0.1.0.0-I6Zs3oHdAuT2i5IuP21bW8/: Lib.dyn_hi  Lib.hi
day1/.stack-work/install/x86_64-linux/lts-9.14/8.0.2/pkgdb/: day1-0.1.0.0-LKLId9gWgcN8O7u7p6ZsBZ.conf  package.cache
day1/app/: Main.hs
day1/src/: Lib.hs
day1/test/: Spec.hs
day2/: day2.cabal
day2/app/: Main.hs
day2/src/: Day2.hs  Lib.hs
day4/: day4.cabal
day4/app/: Main.hs
day4/src/: Day4.hs
day5/app/: Main.hs
day5/src/: Day5.hs
(+2 files in other folders)
