name: AdventofCode2017
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    input-d2.txt
    input-d6.txt
    input-d1.txt
    input-d4.txt
    input-d5.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable AdventofCode2017
  main-is: Day1.hs
  buildable: True
  build-depends:
      base -any
  default-language: Haskell2010
  other-modules:
      Day5
      Day4
      Day6
      Day2
      Day3
